unpackaged/main/default/objects/Consumo_Servicios__c/Consumo_Servicios__c.object-meta.xml
<CustomObject>
    <label>Consumo de servicios</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Nombre de Consumos de servicio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumos de servicios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>