unpackaged/main/default/objects/Consumo_Servicios__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Registros_de_consumo_de_servicios</relationshipName>
    <type>Lookup</type>
</CustomField>