unpackaged/main/default/objects/Consumo_Servicios__c/fields/Nombre_del_servicio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_servicio__c</fullName>
    <label>Nombre del servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>