unpackaged/main/default/objects/Consumo_Servicios__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Cuenta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Consumos de servicios</relationshipLabel>
    <relationshipName>Registros_de_consumo_de_servicios</relationshipName>
    <type>Lookup</type>
</CustomField>