unpackaged/main/default/objects/Consumo_Servicios__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Cuenta__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Nombre_del_servicio__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Proceso_de_Venta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>